# ganymede

./: .env.example  .gitignore  AGENT.md  OPERATING_NOTES.md  README.md  RUNBOOK.md  build_linux.sh  chalice_Agent Lifecycle Hook.json  deploy_windows_vps.sh  ganymede.spec  hook.json  mcp_config.json  old_agent_manager.py  out.txt  output.txt  plugin.json  pyproject.toml  test_chunks.py  test_import.py  test_interactive_transcript.py  test_kill.py  test_sched.py  test_stream.py  test_type.py
.agents/rules/: model_parameters.md
brew/: ganymede.rb
config/: default.yaml
plugins/chalice/: hooks.json  plugin.json
plugins/chalice/scripts/: broadcast.py  watchdog.py
plugins/chalice/sidecars/: conduit.py
rules/: ci-cd.md  discord-context.md
scripts/: bump_tag.sh  deploy.sh  dev_run.sh  install_linux.sh  install_windows.ps1  test_conversation.py  test_discord_invocation.py
sidecars/discord-bridge/: sidecar.json
skills/discord/: SKILL.md
src/ganymede/: __main__.py  cli.py  config.py
src/ganymede/core/: __init__.py  activation.py  agent_manager.py  db.py  models.py  quota.py  router.py  safety.py  scheduler.py  status.py  web.py
src/ganymede/formatting/: base.py
src/ganymede/mcp_server/: __init__.py  __main__.py  tools.py
src/ganymede/web/: app.js  index.html  style.css
tests/: test_ganymede.py
