[project]
name = "ganymede"
version = "0.1.17"
description = "Discord communications and productivity gateway for Antigravity"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "google-antigravity>=0.1.0",
    "discord.py>=2.4.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "apscheduler>=4.0.0a5",
    "mcp>=1.0.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
ganymede = "ganymede.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ganymede"]

[tool.hatch.build.targets.wheel.force-include]
"config/default.yaml" = "ganymede/config/default.yaml"
